fixed wraps for texts in the web app

--- a/public/css/global.css
+++ b/public/css/global.css
@@ -27,7 +27,7 @@ body {
 
 p {
 	font-size: 1.1rem;
-	white-space: pre-wrap;
+	white-space: normal;
 	word-wrap: break-word;
 }
 
