--- a/public/css/single-blog.css
+++ b/public/css/single-blog.css
@@ -16,3 +16,7 @@
 	margin-top: 20px;
 	color: var(--black-color);
 }
+
+.single-blog p {
+	white-space: pre-wrap;
+}
